gltransformation: fix DrawElements call for element array buffers

https://bugzilla.gnome.org/show_bug.cgi?id=749734